# fastapi-template

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHEATSHEET.md  CURSOR_GUIDE.md  Dockerfile  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/: context.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 44ff69110358_initial_migration.py
docs/: ARCHITECTURE.md  CONVENTIONS.md  DEVELOPMENT.md  DOMAIN_MODEL.md  FOLDER_STRUCTURE.md  GIT_WORKFLOW.md  PATTERNS.md  TECH_STACK.md
scripts/: README.md  auto-commit.sh  quick-fix.sh  setup.sh
scripts/hooks/: post-commit  pre-commit-doc-check
src/app/: __init__.py  main.py
src/app/api/: __init__.py
src/app/api/v1/: router.py
src/app/core/: __init__.py  config.py  database.py  logging.py  security.py
src/app/modules/: __init__.py
src/app/modules/catalog/: __init__.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/app/modules/orders/: __init__.py
src/app/modules/orders/application/: __init__.py
src/app/modules/orders/application/dto/: __init__.py  commands.py
src/app/modules/orders/application/use_cases/: __init__.py  add_item_to_order.py  confirm_order.py  create_order.py  get_order.py
src/app/modules/orders/domain/: __init__.py  exceptions.py
src/app/modules/orders/domain/entities/: __init__.py  order.py  order_item.py
src/app/modules/orders/domain/repositories/: __init__.py  order_repository.py
src/app/modules/orders/domain/value_objects/: __init__.py  customer_id.py  order_id.py  order_status.py  product_id.py
src/app/modules/orders/infrastructure/: __init__.py
src/app/modules/orders/infrastructure/persistence/: __init__.py  models.py  order_repository_impl.py
src/app/modules/orders/presentation/: __init__.py
src/app/modules/orders/presentation/api/: __init__.py  dependencies.py  router.py
src/app/modules/orders/presentation/schemas/: __init__.py  request.py  response.py
src/app/shared/: __init__.py  exceptions.py
src/app/shared/domain/: __init__.py
src/app/shared/domain/value_objects/: __init__.py  address.py  email.py  money.py
tests/: __init__.py  conftest.py
tests/e2e/: test_health.py
tests/unit/: test_money.py  test_order.py
